--- a/assets/invoice_css/custom.css
+++ b/assets/invoice_css/custom.css
@@ -1,9 +1,18 @@
 * { margin: 0; padding: 0; }
-body { font: 11px/1.4 Georgia, serif; }
+body { font: 11px/1.4 Georgia, serif; padding:0;}
 
-#wrapper {width: :8.26in; margin: 0 0; padding: .7in .5in; }
-#wrapper h2 { text-align: center; width: 100%;}
+#wrapper {width: :8.26in; margin: 0 0; padding: 0in .4in; }
+#wrapper h2 { text-align: center; width: 100%; margin-top: 0; padding-top:0;}
 #header .left {float: left; width: 70%;}
+#banner {width: 7.46in; text-align: center;}
+
+#title {position: relative;}
+#logo {float: left;}
+#logo {width: 1in;}
+#logo img {margin: 0;}
+#title h1 { font-size: 36pt; float: left; margin: 0; padding: 0}
+#title p {padding: 0; margin: 0;}
+
 
 #header .right {float: right; width: 30%;}
 #header .right table {float: left;}
