--- a/assets/invoice_css/custom.css
+++ b/assets/invoice_css/custom.css
@@ -10,19 +10,19 @@ body { font: 11px/1.4 Georgia, serif; padding:0;}
 #logo {float: left;}
 #logo {width: 1in;}
 #logo img {margin: 0;}
-#title h1 { font-size: 36pt; float: left; margin: 0; padding: 0}
-#title p {padding: 0; margin: 0;}
+#title h1 { font-size: 36pt; float: left; margin: 0 !important; padding: 0 !important;}
+#title p {padding: 0 !important; margin: 0 !important;}
 
 
 #header .right {float: right; width: 30%;}
 #header .right table {float: left;}
 #header .right table td { text-align: right;}
 
-#content { margin-top:.4in;}
+#content { margin-top:.2in;}
 
 #content table {text-align: left; padding-left: 5px; border-collapse: collapse;}
 #content table th {border: 1px solid #000; background-color: #dcdcdc;}
-#content table td {border: 1px solid #eeeeee; height: .2in; }
+#content table td {border: .5px solid #747474; height: .2in; }
 
 #content table th:nth-child(1){width: 6.88%;}
 #content table th:nth-child(2){width: 32%; text-align: left;}
