--- a/assets/invoice_css/warranty-claim.css
+++ b/assets/invoice_css/warranty-claim.css
@@ -22,11 +22,11 @@ body { font: 11px/1.4 Georgia, serif; padding:0;}
 
 #content { margin-top:.2in;}
 
-#content table {text-align: left; padding-left: 5px; border-collapse: collapse;}
+#content table {text-align: left; padding-left: 5px; border-collapse: collapse; width: 100%}
 #content table th {border: 1px solid #000; background-color: #dcdcdc;}
-#content table td {border: .5px solid #747474; height: .2in; }
+#content table td {border: .5px solid #747474; height: .2in; text-align: left;}
 
-#content table th:nth-child(1){width: 6.88%;}
+/*#content table th:nth-child(1){width: 6.88%;}
 #content table th:nth-child(2){width: 32%; text-align: left;}
 #content table th:nth-child(3){width: 15%; text-align: right;}
 #content table th:nth-child(4){width: 11.9%; text-align: right;}
@@ -40,6 +40,6 @@ body { font: 11px/1.4 Georgia, serif; padding:0;}
 #content table td:nth-child(4){width: 11.9%; text-align: right;}
 #content table td:nth-child(5){width: 6.8%; text-align: center;}
 #content table td:nth-child(6){width: 9.6%; text-align: right;}
-#content table td:nth-child(7){width: 17.8%; text-align: right;}
+#content table td:nth-child(7){width: 17.8%; text-align: right;}*/
 
 #content table tr:nth-child(even){background-color: #f2f2f2}
